--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
@@ -1777,4 +1777,102 @@ Jakýkoli uživatel může aktualizovat aplikace všech ostatních uživatelů."
   <string name="gxzw_press_harder">Stiskněte silněji</string>
   <string name="gxzw_try_more_again">Zkuste to znovu</string>
   <string name="gxzw_use_password">Použijte heslo</string>
+  
+       <string name="accessibility_battery_level_charging">Nabíjanie batérie, %d percent.</string>
+     <string name="accessibility_drag_hint_message">Potiahnite položku na vrch obrazovky</string>
+     <string name="accessibility_left_button">Skratka</string>
+     <string name="accessibility_recent_task_exit">Zatvorené</string>
+     <string name="accessibility_recent_task_locked">Uzamknuté, potiahnite nadol pre odomknutie.</string>
+     <string name="accessibility_recent_task_locked_state">Uzamknuté</string>
+     <string name="accessibility_recent_task_memory_info">Celkom RAM: %2$s | Dostupná RAM: %1$s. Dvojitým dotykom vyprázdnite.</string>
+     <string name="accessibility_recent_task_unlocked">Odomknuté</string>
+     <string name="accessibility_recent_task_unlocked_state">Odomknuté</string>
+     <string name="auto_disable_screenbuttons_disable_toast_text">Navigation buttons disabled, double tap any button to turn them back on.</string>
+     <string name="auto_disable_screenbuttons_enable_toast_text">Navigation buttons enabled</string>
+     <string name="back">Back</string>
+     <string name="car_lockscreen_disclaimer_text">Stay fully aware of driving conditions and always obey applicable laws. Directions may be inaccurate, incomplete, dangerous, not suitable, prohibited, or involve crossing administrative areas. Business information may also be inaccurate or incomplete. Data is not real-time, and location accuracy cannot be guaranteed. Do not handle your mobile device or use apps not intended for Android Auto while driving.</string>
+     <string name="car_lockscreen_disclaimer_title">Drive safely</string>
+     <string name="change_theme_reboot">Zmena témy vyžaduje reštartovanie zariadenia.</string>
+     <string name="confirm">Rozumiem</string>
+     <string name="default_theme">Predvolená</string>
+     <string name="drive_mode_tip_idle">Tap to exit Car mode</string>
+     <string name="drive_mode_tip_idle_notch">Exit Car mode</string>
+     <string name="drive_mode_tip_notch">Car mode on</string>
+     <string name="fingerprint_enter_second_psw_msg_oldman">"Can't enter Second space while in Lite mode"</string>
+     <string name="fingerprint_not_identified_msg_lock">Príliš mnoho nesprávnych pokusov. Zadajte vaše heslo.</string>
+     <string name="gxzw_try_again">Skúste to znova</string>
+     <string name="lockscreen_access_pattern_area">Zadávanie vzoru.</string>
+     <string name="lockscreen_access_pattern_cell_added_verbose">Bunka %1$s pridaná</string>
+     <string name="lockscreen_sim_error_message_short">Chybná karta.</string>
+     <string name="memory_clear_result_giga">%1$sGB vyčistené</string>
+     <string name="memory_clear_result_mega">%1$sMB vyčistené</string>
+     <string name="miui_ringer_count_down">Odpočítavanie</string>
+     <string name="miui_ringer_count_down_time">Odpočítavanie: %s</string>
+     <string name="miui_ringer_standard">Ticho</string>
+     <string name="miui_ringer_standard_description">Stíšiť zvonenie pre hovory a upozornenia</string>
+     <string name="miui_ringer_total">Nerušiť</string>
+     <string name="miui_ringer_total_description">Stíšiť zvuky a vypnúť vibrácie okrem budíka</string>
+     <string name="miui_toast_zen_dnd_to_off">Zvuky a vibrácie sú obnovené</string>
+     <string name="miui_toast_zen_standard_to_off">Zvonenie obnovené</string>
+     <string name="miui_toast_zen_to_dnd">Zvuky sú stíšené a vibrácie vypnuté</string>
+     <string name="miui_toast_zen_to_standard">Zvonenie a upozornenia sú stíšené</string>
+     <string name="no_tiles_add">Žiadne dlaždice</string>
+     <string name="notification_channel_location">Poloha</string>
+     <string name="notification_group_collapse_button_text">Zbaliť</string>
+     <string name="notification_hidden_by_policy_text">Obsah je skrytý</string>
+     <string name="notification_info_channel_disabled_text">NEbudete dostávať %2$s upozornenia od %1$s.</string>
+     <string name="notification_info_channel_enabled_text">Budete dostávať %2$s upozornenia od %1$s.</string>
+     <string name="notification_menu_filter_description">Menej dôležité upozornenia</string>
+     <string name="notification_menu_filter_secondary_text">Všetky upozornenia od %s budú v samostatnej zložke.</string>
+     <string name="notification_menu_filter_title">Menej dôležité</string>
+     <string name="notification_menu_remove_from_filter_secondary_text">Všetky dôležité upozornenia od %s budú zobrazené priamo v roletke.</string>
+     <string name="notification_menu_remove_from_filter_title">Dôležité</string>
+     <string name="oldman_airplane_mode_text">Lietadlo</string>
+     <string name="oldman_incall_text">Naspäť k hovoru</string>
+     <string name="plugins">Doplnky</string>
+     <string name="qs_customize">Povoliť prispôsobenie prepínačov</string>
+     <string name="qs_customize_info">Info</string>
+     <string name="qs_customize_remove">Odobrať</string>
+     <string name="qs_customize_title">Upraviť</string>
+     <string name="qs_paging">Použiť nové prepínače</string>
+     <string name="quick_settings_autobrightness_label">Auto. jas</string>
+     <string name="quick_settings_batterysaver_label">Šetrenie batérie</string>
+     <string name="quick_settings_drivemode_label">Automobil</string>
+     <string name="quick_settings_dual_location_label">GPS</string>
+     <string name="quick_settings_edit_label">Upraviť</string>
+     <string name="quick_settings_midrop_label">MiDrop</string>
+     <string name="quick_settings_mute_label">Stíšiť</string>
+     <string name="quick_settings_papermode_label">Čítací režim</string>
+     <string name="quick_settings_powermode_label">Výkon</string>
+     <string name="quick_settings_quietmode_label">Nerušiť</string>
+     <string name="quick_settings_screenbutton_label">Tlačidlá</string>
+     <string name="quick_settings_screenlock_label">Zámok</string>
+     <string name="quick_settings_screenshot_label">Screenshot</string>
+     <string name="quick_settings_sync_label">Synchr.</string>
+     <string name="quick_settings_vibrate_label">Vibrácie</string>
+     <string name="recent_menu_item_info">Info</string>
+     <string name="recent_menu_item_lock">Zamknúť</string>
+     <string name="recent_menu_item_multi_window">Rozdeliť</string>
+     <string name="recent_menu_item_unlock">Odomknúť</string>
+     <string name="report_rejected_touch">Report rejected touch</string>
+     <string name="select_logd_level">Select log level</string>
+     <string name="snooze_option_15_min">15 minút</string>
+     <string name="snooze_option_1_hour">1 hodina</string>
+     <string name="snooze_option_2_hour">2 hhodiny</string>
+     <string name="snooze_option_30_min">30 minút</string>
+     <string name="status_bar_clock_date_format_12">EEEE, MMMM d</string>
+     <string name="stream_system_enforced">System enforced</string>
+     <string name="stream_tts">Transmitted Through Speaker</string>
+     <string name="theme">Téma</string>
+     <string name="tuner_doze">Ambient Display</string>
+     <string name="tuner_doze_always_on">Always on</string>
+     <string name="v7_preference_off">VYP</string>
+     <string name="v7_preference_on">ZAP</string>
+     <string name="volume_stream_limited_dnd">%s — Iba prioritné</string>
+     <string name="volume_stream_muted">%s stíšené</string>
+     <string name="volume_stream_muted_dnd">%s stíšené — Celkovo stíšené</string>
+     <string name="volume_stream_suppressed">%1$s stíšené — %2$s</string>
+     <string name="volume_stream_vibrate">%s vibrovať</string>
+     <string name="volume_stream_vibrate_dnd">%s vibrovať — Iba dôležité</string>
+     <string name="wallpaper_global_des_drop_down_notify_text">Pustite pre zobrazenie podrobností</string>
 </resources>
