--- a/Czech/main/DeskClock.apk/res/values-cs/strings.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/strings.xml
@@ -164,4 +164,45 @@
    <string name="life_post_wake_up_time_title">Čas probuzení</string>
    <string name="life_post_weather_invalid">Nelze získat informace o počasí</string>
     <string name="life_post_weather_description_secondary">%1$s | %2$s | %3$s</string>
+    <string name="alarm_clock_more_setting">Další nastavená</string>
+     <string name="channel_name_alarm">Budík</string>
+     <string name="channel_name_timer">Časovač</string>
+     <string name="dialog_message_agree">Souhlasím</string>
+     <string name="dialog_message_for_contact_permission">Pro načtení narozenin potřebuje aplikace přístup ke kontaktům. Souhlasíte?</string>
+     <string name="dialog_message_negative">Ne</string>
+     <string name="dynamic_alarm_speech">Inteligentní budík</string>
+     <string name="edit_alarm">Upravit budík</string>
+     <string name="module_download_cancel">Později</string>
+     <string name="module_download_data_msg">Pro funkci inteligentního budíku, zvuků přírody a narozenin vyžaduje aplikace přístup ke kontaktům a k síti. Použít datové připojení pro stažení nových zvuků?</string>
+     <string name="module_download_data_msg_golbal">Pro funkci inteligentního budíku a zvuků přírody je vyžadováno stažení nových zvuků. Použít datové připojení pro stažení nových zvuků?</string>
+     <string name="module_download_fail">Nelze stáhnout zvuky</string>
+     <string name="module_download_msg">Pro funkci inteligentního budíku, zvuků přírody a narozenin vyžaduje aplikace přístup ke kontaktům a k síti. Souhlasíte?</string>
+     <string name="module_download_msg_golbal">Pro funkci inteligentního budíku a zvuků přírody je vyžadováno stažení nových zvuků. Souhlasíte?</string>
+     <string name="module_download_no_network">Nelze se připojit k síti.</string>
+     <string name="module_download_ok">Souhlasím</string>
+     <string name="module_download_success">Zvuky jsou staženy</string>
+     <string name="module_download_title">Vyžadovány dodatečné zvuky</string>
+     <string name="module_downloading">Stahování zvuků...</string>
+     <string name="monday_to_friday">Pondělí až pátek</string>
+     <string name="set_alarm_done">Hotovo</string>
+     <string name="timer_alert_type_beach">Pláž</string>
+     <string name="timer_alert_type_forest">Les</string>
+     <string name="timer_alert_type_mute">Výchozí</string>
+     <string name="timer_alert_type_rain">Déšť</string>
+     <string name="timer_alert_type_stove_fire">Oheň</string>
+     <string name="timer_alert_type_summer_night">Letní noc</string>
+     <string name="timer_cancel_timer">Zrušit</string>
+     <string name="timer_continue_timer">Obnovit</string>
+     <string name="timer_pause_hint">Zastavit</string>
+     <string name="timer_pause_timer">Zastavit</string>
+     <string name="timer_running">Časovač je spuštěn</string>
+     <string name="timer_running_hint">Pokračovat</string>
+     <string name="timer_start_timer">Start</string>
+     <string name="worldclock_input_hint_text">Zadejte město nebo krajinu</string>
+     <string name="worldclock_search_city">Vyberte město</string>
+     <string name="worldclock_world_time">Časové zóny</string>
+     <string name="worldcolock_timezone_current">Současné: %1$s</string>
+     <string name="worldcolock_timezone_date">MMM dd</string>
+     <string name="worldcolock_timezone_gap">Hodina</string>
+     <string name="worldcolock_timezone_local">Stejný čas jako u vás</string>  
 </resources>
