--- a/Czech/main/CleanMaster.apk/res/values-cs/strings.xml
+++ b/Czech/main/CleanMaster.apk/res/values-cs/strings.xml
@@ -499,4 +499,6 @@
   <string name="guide_virus_dialog_positive">Zkontrolovat</string>
   <string name="guide_virus_dialog_title">Aktivir</string>
   <string name="mainbtn_text_no_trash">Přeskočit</string>
+  <string name="clean_long_msg">"Čištění %1$d souborů,%2$d dokončeno 
++%3$d%% položek/s zbývající čas: %4$s"</string>
 </resources>
