--- a/Czech/main/Notes.apk/res/values-cs/strings.xml
+++ b/Czech/main/Notes.apk/res/values-cs/strings.xml
@@ -234,4 +234,31 @@ http://www.miuios.cz/rom
    <string name="refuse_to_open_as_pic_because_of_loading">Vyčkejte na načtení poznámky a zkuste to znovu</string>
    <string name="toast_cancel_to_insert_image">Zrušit přidávání obrázků.</string>
   <string name="dialog_privacy_revoke_tips">Po odmítnutí aurotizace přestane aplikace shromažďovat data a všechna data budou vymazána ze serveru.</string>
+  <string name="application_icon">Ikona</string>
+     <string name="audio_toast_file_invalid">Zvuk je neplatný</string>
+     <string name="audio_toast_file_undownload">Audio soubor není stažen</string>
+     <string name="audio_toast_network_is_not_available">Nelze se připojit k síti</string>
+     <string name="dlg_info_save_to_gallery_message">Ukládání obrázků do galerie...</string>
+     <string name="edit_header_lock_description">Tajná poznámka</string>
+     <string name="empty_folder_import_notes">Impotrovat poznámky</string>
+     <string name="empty_folder_no_notes">Žádné poznámky</string>
+     <string name="first_enter_custom_folder_hint">Můžete přejmenovat nebo vymazat složky</string>
+     <string name="folder_operation_delete">Vymazat</string>
+     <string name="folder_operation_rename">Přejmenovat</string>
+     <string name="hide_arrow_description">Skrýt</string>
+     <string name="menu_add_audio_description">Přidat hlas</string>
+     <string name="rich_text_bold_description">Tučné</string>
+     <string name="rich_text_center_description">Střed</string>
+     <string name="rich_text_chooser_title">Styl</string>
+     <string name="rich_text_italic_description">Šikmé</string>
+     <string name="rich_text_right_description">Vpravo</string>
+     <string name="rich_text_size_description">Velikost</string>
+     <string name="rich_text_underline_description">Podtržené</string>
+     <string name="save_to_gallery_failure_message">Nelze uložit</string>
+     <string name="save_to_gallery_icon_name">Uložit do Galerie</string>
+     <string name="save_to_gallery_success_message">Uloženo</string>
+     <string name="snippet_audio_stub">Hlasová poznámka</string>
+     <string name="toast_refuse_to_record_when_in_call">Tato funkce není dostupná během hovoru</string>
+     <string name="toolbar_text_description">Styl textu</string>
+     <string name="toolbar_voice_description">Hlas</string>  
 </resources>
